Implemented new way to analyze result

--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanalData.cs" />
+    <Compile Include="Canals\AnalysisOptions.cs" />
     <Compile Include="Canals\CanalGeometryData.cs" />
     <Compile Include="Canals\CanalPointResult.cs" />
     <Compile Include="Canals\CanalSimulationResult.cs" />
