--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
@@ -1,64 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B14FF188-99E1-48F2-90EC-8745E42412A4}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScienceAndMaths.Hydraulics</RootNamespace>
-    <AssemblyName>ScienceAndMaths.Hydraulics</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\ScienceAndMaths.Mathematics\ScienceAndMaths.Mathematics.csproj" />
+    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Canals\Canal.cs" />
-    <Compile Include="Canals\CanalEdge.cs" />
-    <Compile Include="Canals\CanalStretch.cs" />
-    <Compile Include="Canals\CanalSection.cs" />
-    <Compile Include="Canals\SluiceCanalEdge.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Canals\RectangularSection.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ScienceAndMaths.Mathematics\ScienceAndMaths.Mathematics.csproj">
-      <Project>{FE52CF6D-A8E0-4B30-9FB9-926C71639BC2}</Project>
-      <Name>ScienceAndMaths.Mathematics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
-      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
-      <Name>ScienceAndMaths.Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
