--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -46,7 +46,7 @@ on:
 
 jobs:
 
-  build and test:
+  buildAndTest:
 
     runs-on: ubuntu-latest  # windwos-latest. For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
