--- a/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
+++ b/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
@@ -19,5 +19,8 @@
       <DependentUpon>MLModel.mbconfig</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj" />
   </ItemGroup>
 </Project>
