--- a/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
+++ b/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
@@ -3,9 +3,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.6.0" />
+    <PackageReference Include="Microsoft.ML" Version="2.0.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="2.0.1" />
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.6.0" />
     <PackageReference Include="Microsoft.ML.Vision" Version="1.6.0" />
+    <PackageReference Include="Plotly.NET" Version="3.0.1" />
     <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup Label="MLModel">
@@ -22,5 +24,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup Label="AgbarMLModel1">
+    <None Include="AgbarMLModel1.mlnet">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
