New models for AGBAR

--- a/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
+++ b/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
@@ -30,4 +30,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup Label="AgbarMLModelTest">
+    <None Include="AgbarMLModelTest.mlnet">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
