Final model for Agbar

--- a/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
+++ b/products/ScienceAndMaths.Libraries/ScienceAndMaths.MachineLearning/ScienceAndMaths.MachineLearning.csproj
@@ -35,4 +35,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup Label="AgbarMLModelFull">
+    <None Include="AgbarMLModelFull.mlnet">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
